src/common.h

#define COFFE_MAX_STRLEN 256 // largest allowed length of the filename
typedef struct coffe_fit_coefficients_array_t
{
    coffe_fit_coefficients_t *array;
    size_t size;
} coffe_fit_coefficients_array_t;
/**
    contains the coordinates for the correlation function at (z, r, mu)
**/

typedef struct coffe_corrfunc_coords_t
{
    double z_mean;
    double separation;
    double mu;
} coffe_corrfunc_coords_t;
/**
    same as above for multipoles
**/

typedef struct coffe_multipoles_coords_t
{
    double z_mean;
    double separation;
    int l;
} coffe_multipoles_coords_t;
/**
    wrapper for 1D GSL interpolation structure
**/

typedef struct coffe_interpolation
{
    gsl_spline *spline;
    gsl_interp_accel *accel;
} coffe_interpolation;
/**
    wrapper for 2D GSL interpolation structure
**/

typedef struct coffe_interpolation2d
{
    gsl_spline2d *spline;
    gsl_interp_accel *xaccel;
    gsl_interp_accel *yaccel;
} coffe_interpolation2d;
/**
    simple enum to specify which correlation terms we need to compute
**/

enum coffe_integral_type
{
    NONINTEGRATED, SINGLE_INTEGRATED, DOUBLE_INTEGRATED
};
/**
    same as above, but for specifing the output type
**/

enum coffe_output_type
{
    CORRFUNC = 1,
    MULTIPOLES = 2,
    AVERAGE_MULTIPOLES = 3,
    COVARIANCE_MULTIPOLES = 4,
    COVARIANCE_AVERAGE_MULTIPOLES = 5
};
enum coffe_interp1d_type
{
    COFFE_INTERP_LINEAR = 1,
    COFFE_INTERP_POLYNOMIAL = 2,
    COFFE_INTERP_CSPLINE = 3,
    COFFE_INTERP_CSPLINE_PERIODIC = 4,
    COFFE_INTERP_AKIMA = 5,
    COFFE_INTERP_AKIMA_PERIODIC = 6,
    COFFE_INTERP_STEFFEN = 7
};
enum coffe_pk_type
{
    COFFE_PK_LINEAR = 0,
    COFFE_PK_LINEAR_CLASS = 1,
    COFFE_PK_NONLINEAR_HALOFIT = 2,
    COFFE_PK_NONLINEAR_HMCODE = 3
};
/**
    contains all the values for n and l
    for which we need to compute the I^n_l;
    others are zero
**/

typedef struct nl_terms
{
    int n, l;
} nl_terms;
/**
    structure with all of the correlation contributions
**/

typedef struct coffe_correlation_contributions
{
    int den, rsd, len, d1, d2, g1, g2, g3, g4, g5;
} coffe_correlation_contributions;
/**
    contains all the parameters necessary to carry
    out the computation
**/

typedef struct coffe_parameters_t
{
    int output_type; /* correlation function (angular or full sky), or multipoles, or redshift averaged multipoles */

    double *mu; /* value for the angles */

    size_t mu_len; /* number of angles */

    coffe_correlation_contributions correlation_contrib; /* all of the correlation contributions (internally) */

    char **type_bg; /* background values to output */

    size_t type_bg_len; /* number of background values */

    int background_bins; /* number of bins for the background */

    int bessel_bins; /* number of bins for the bessel integrals */

    double Omega0_cdm; /* omega parameter for cold dark matter */

    double Omega0_m;

    int b_derivative, f_derivative, b_tilde_derivative, f_tilde_derivative;

    double Omega0_baryon; /* omega parameter for baryons */

    double Omega0_gamma; /* omega parameter for photons */

    double w0; /* parameter for the equation of state of dark energy */

    double wa; /* parameter for the equation of state of dark energy */

    double Omega0_de; /* present omega parameter for dark energy-like component */

    double *z_mean; /* mean redshift */

    size_t z_mean_len;

    double *deltaz;

    size_t deltaz_len;

    double *sep; /* all the separations */

    size_t sep_len; /* number of separations */

    int integration_method;

    int integration_bins;

    int nthreads; /* how many threads are used for the computation */

    char file_power_spectrum[COFFE_MAX_STRLEN]; /* file containing the PS */

    coffe_interpolation power_spectrum;

    coffe_interpolation power_spectrum_norm;

    double k_min; /* min value to be taken from PS file */

    double k_max; /* max value to be taken from PS file */

    double k_min_norm; /* min value to be taken from PS file */

    double k_max_norm; /* max value to be taken from PS file */

    /* different biases */
    int read_galaxy_bias1, read_galaxy_bias2;

    char file_galaxy_bias1[COFFE_MAX_STRLEN], file_galaxy_bias2[COFFE_MAX_STRLEN];

    coffe_interpolation galaxy_bias1, galaxy_bias2;

    int read_magnification_bias1, read_magnification_bias2;

    int galaxy_bias_analytic;

    char file_magnification_bias1[COFFE_MAX_STRLEN], file_magnification_bias2[COFFE_MAX_STRLEN];

    coffe_interpolation magnification_bias1, magnification_bias2;

    int read_evolution_bias1, read_evolution_bias2;

    char file_evolution_bias1[COFFE_MAX_STRLEN], file_evolution_bias2[COFFE_MAX_STRLEN];

    coffe_interpolation evolution_bias1, evolution_bias2;

    int divergent; /* flag for divergent integrals */

    #ifndef COFFE_CYTHON
    config_t *conf; /* contains all the settings */
    #endif

    char timestamp[COFFE_MAX_STRLEN]; /* when the calculation started */

    char output_path[COFFE_MAX_STRLEN]; /* output directory for all the files */

    char output_prefix[COFFE_MAX_STRLEN]; /* output prefix for all the files */

    enum coffe_interp1d_type interp_method; /* method used for interpolation (linear, poly, etc.) */

    int *multipole_values; /* the multipoles to calculate */

    size_t multipole_values_len;

    int has_class;

    int has_cuba;

    double *zmin;

    size_t zmin_len;

    double *zmax;

    size_t zmax_len;

    double *fsky;

    size_t fsky_len;

    double *density;

    size_t density_len;

    double *pixelsize;

    size_t pixelsize_len;

    int covariance_integration_method;

    int covariance_integration_bins;

    int covariance_interpolation_method;

    int covariance_window;

    int have_window;

    double window_size;

    /* for redshift averaged multipoles */
    double z_min, z_max;

    int theta_len;

    int flatsky_local;

    int flatsky_local_nonlocal;

    int flatsky_nonlocal;

    int verbose;

    /* stuff for CLASS only */

    int have_class; /* should CLASS be used or not? */

    double n_s; /* spectral index n_s */

    double sigma8; /* amplitude of primordial power spectrum sigma8 */

    double T_cmb, N_ur, m_ncdm;

    int N_ncdm;

    double h; /* Damn you, little h! */

    double k_pivot; /* for CLASS */

    /* in C we can use void for anything that's a pointer */
    void *class_file_content,
         *class_background,
         *class_thermodynamics,
         *class_perturb,
         *class_primordial,
         *class_nonlinear,
         *class_transfer,
         *class_spectra;

    int flag;

    enum coffe_pk_type pk_type;

    int midpoint_approximation;

    int only_cross_correlations;

    coffe_fit_coefficients_array_t galaxy_bias1_coefficients;
    coffe_fit_coefficients_array_t galaxy_bias2_coefficients;
    coffe_fit_coefficients_array_t magnification_bias1_coefficients;
    coffe_fit_coefficients_array_t magnification_bias2_coefficients;

    int degree_galaxy_bias1, degree_galaxy_bias2;
    int degree_magnification_bias1, degree_magnification_bias2;

} coffe_parameters_t;
int coffe_parameters_free(
    coffe_parameters_t *par
);
/**
    integrates any 1D function `func` with arbitrary parameters `parameters`
    between `a` and `b`, with relative precision `prec`, and returns `result`
**/

double coffe_integrate_1d_prec(
    double (*func)(
        double,
#ifdef HAVE_DOUBLE_EXPONENTIAL
/**
    integrates any 1D function `func` with arbitrary parameters `parameters`
    between `a` and `b` and returns `result`
**/

double coffe_integrate_1d(
    double (*func)(
        double,
#ifdef HAVE_DOUBLE_EXPONENTIAL
    int (*func)(
        const int *,
        const cubareal *,
        const int *,
        cubareal *,
        void *
    ),
#else
    double (*func)(
        double *,
        size_t,
        void *
    ),
#endif
double *coffe_generate_range(
    const double xmin,
    const double xmax,
    const size_t steps
);