src/corrfunc.h

typedef struct coffe_corrfunc_t
{
    coffe_corrfunc_coords_t coords;
    double value;
} coffe_corrfunc_t;
typedef struct coffe_corrfunc_array_t
{
    coffe_corrfunc_t *array;
    size_t size;
} coffe_corrfunc_array_t;